--- a/admin.html
+++ b/admin.html
@@ -29,14 +29,27 @@
     .danger{color:#b00020;cursor:pointer;}
     .hidden{display:none;}
     .mt{margin-top:.6rem;}
-    #formMsg a{color:var(--accent);font-weight:500;text-decoration:none;}
+
+    /* LOGIN */
     #loginCard{max-width:400px;margin:15vh auto;text-align:center;padding:2rem;}
     #loginCard input{text-align:center;font-size:1rem;}
     #loginBtn{margin-top:1rem;width:100%;}
-    @media(max-width:600px){.row{grid-template-columns:1fr;}#loginCard{margin:20vh 1rem;}header h1{font-size:1rem;}table{font-size:.8rem;} .right{justify-content:center;}}
+
+    /* RESPONSIVE */
+    @media(max-width:600px){
+      .row{grid-template-columns:1fr;}
+      #loginCard{margin:20vh 1rem;}
+      header h1{font-size:1rem;}
+      table{font-size:.8rem;}
+      .right{justify-content:center;}
+    }
+
+    /* LOADING */
     #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,0.7);display:none;justify-content:center;align-items:center;z-index:3000;}
     .spinner{width:50px;height:50px;border:4px solid #ddd;border-top:4px solid var(--accent);border-radius:50%;animation:spin 1s linear infinite;}
     @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+
+    /* Popup custom */
     .popup{position:fixed;inset:0;background:rgba(0,0,0,0.5);display:flex;justify-content:center;align-items:center;z-index:4000;}
     .popup.hidden{display:none;}
     .popup-box{background:#fff;padding:1rem 1.5rem;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.2);max-width:320px;text-align:center;}
@@ -59,35 +72,83 @@
     <!-- FORM -->
     <div id="formCard" class="card hidden">
       <h3 id="formTitle">Tambah Konten</h3>
-      <div class="row"><div><label>Judul</label><input type="text" id="fJudul"></div><div><label>Kategori</label><select id="fKategori"><option>Berita</option><option>Pengumuman</option><option>Peraturan</option></select></div></div>
-      <label>Isi Konten</label><textarea id="fIsi"></textarea>
-      <div class="row"><div><label>Upload Gambar</label><input type="file" id="fFile" accept="image/*"></div><div><label>GambarURL</label><input type="text" id="fGambarURL"></div></div>
-      <div class="row"><div><label>Status</label><select id="fStatus"><option>Aktif</option><option>Arsip</option></select></div><div><label>Slug</label><input type="text" id="fSlug"></div></div>
-      <div class="right mt"><button class="btn secondary" id="resetBtn">Bersihkan</button><button class="btn" id="saveBtn">Simpan</button><button class="btn secondary" id="logoutBtn">Logout</button></div>
+      <div class="row">
+        <div>
+          <label>Judul</label>
+          <input type="text" id="fJudul" placeholder="Judul berita/pengumuman">
+        </div>
+        <div>
+          <label>Kategori</label>
+          <select id="fKategori">
+            <option>Berita</option>
+            <option>Pengumuman</option>
+            <option>Peraturan</option>
+          </select>
+        </div>
+      </div>
+
+      <label>Isi Konten</label>
+      <textarea id="fIsi" placeholder="Tulis isi lengkap di sini..."></textarea>
+
+      <div class="row">
+        <div>
+          <label>Upload Gambar</label>
+          <input type="file" id="fFile" accept="image/*">
+        </div>
+        <div>
+          <label>GambarURL</label>
+          <input type="text" id="fGambarURL" placeholder="Otomatis terisi setelah upload">
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <label>Status</label>
+          <select id="fStatus"><option>Aktif</option><option>Arsip</option></select>
+        </div>
+        <div>
+          <label>Slug (opsional)</label>
+          <input type="text" id="fSlug" placeholder="contoh-judul-berita">
+        </div>
+      </div>
+
+      <div class="right mt">
+        <button class="btn secondary" id="resetBtn">Bersihkan</button>
+        <button class="btn" id="saveBtn">Simpan</button>
+        <button class="btn secondary" id="logoutBtn">Logout</button>
+      </div>
       <div id="formMsg" class="muted mt"></div>
     </div>
 
     <!-- LIST -->
     <div id="listCard" class="card hidden">
-      <div class="flex" style="display:flex;justify-content:space-between;align-items:center;">
+      <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:.5rem;">
         <h3>Daftar Konten</h3>
-        <select id="filterKategori"><option value="">Semua</option><option>Berita</option><option>Pengumuman</option><option>Peraturan</option></select>
       </div>
-      <input type="text" id="searchAdmin" placeholder="Cari judul/isi..." style="margin:.5rem 0;padding:.5rem;border-radius:12px;border:1px solid #ccc;width:100%;">
-      <table><thead><tr><th>Judul</th><th>Kategori</th><th>Tanggal</th><th>Status</th><th>Gambar</th></tr></thead><tbody id="tbody"></tbody></table>
+      <div class="muted">Klik "Edit" untuk memuat data ke form. "Arsipkan" untuk menyembunyikan dari publik.</div>
+      <table>
+        <thead><tr><th>Judul</th><th>Kategori</th><th>Tanggal</th><th>Status</th><th>Gambar</th></tr></thead>
+        <tbody id="tbody"></tbody>
+      </table>
     </div>
   </main>
 
   <!-- LOADING -->
   <div id="loadingOverlay"><div class="spinner"></div></div>
 
-  <!-- Custom Popup -->
-  <div id="customPopup" class="popup hidden"><div class="popup-box"><p id="popupMessage"></p><div class="popup-actions" id="popupActions"></div></div></div>
+  <!-- Popup -->
+  <div id="customPopup" class="popup hidden">
+    <div class="popup-box">
+      <p id="popupMessage"></p>
+      <div class="popup-actions" id="popupActions"></div>
+    </div>
+  </div>
 
+  <!-- FIREBASE -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
-    import { getFirestore, collection, addDoc, updateDoc, deleteDoc, doc, getDocs, getDoc, query, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, updateDoc, doc, getDocs, getDoc, query, where, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
@@ -104,29 +165,124 @@
     const CLOUD_NAME="dfojor5pr";
     const UPLOAD_PRESET="portal-firebase";
 
-    const loginCard=document.getElementById("loginCard"),formCard=document.getElementById("formCard"),listCard=document.getElementById("listCard"),tbody=document.getElementById("tbody");
+    const loginCard=document.getElementById("loginCard");
+    const formCard=document.getElementById("formCard");
+    const listCard=document.getElementById("listCard");
+    const tbody=document.getElementById("tbody");
+
     let EDIT_ID=null;
 
     function showLoading(on=true){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
-    function showPopup(msg,actions=['OK']){const p=document.getElementById("customPopup");document.getElementById("popupMessage").textContent=msg;document.getElementById("popupActions").innerHTML=actions.map(a=>`<button onclick="document.getElementById('customPopup').classList.add('hidden');if('${a}'==='Ya'&&window._confirmCb)window._confirmCb();">${a}</button>`).join('');p.classList.remove("hidden");}
 
-    onAuthStateChanged(auth,(user)=>{if(user){loginCard.classList.add("hidden");formCard.classList.remove("hidden");listCard.classList.remove("hidden");reloadList();}else{loginCard.classList.remove("hidden");formCard.classList.add("hidden");listCard.classList.add("hidden");}});
+    function showPopup(msg,confirm=false,callback=null){
+      const p=document.getElementById("customPopup");
+      document.getElementById("popupMessage").textContent=msg;
+      if(confirm){
+        document.getElementById("popupActions").innerHTML=`
+          <button onclick="document.getElementById('customPopup').classList.add('hidden');(${callback})(true)">Ya</button>
+          <button onclick="document.getElementById('customPopup').classList.add('hidden');(${callback})(false)">Batal</button>`;
+      }else{
+        document.getElementById("popupActions").innerHTML='<button onclick="document.getElementById(`customPopup`).classList.add(`hidden`)">OK</button>';
+      }
+      p.classList.remove("hidden");
+    }
 
-    document.getElementById("loginBtn").onclick=async()=>{try{await signInWithEmailAndPassword(auth,document.getElementById("loginEmail").value,document.getElementById("loginPassword").value);}catch(err){document.getElementById("loginMsg").textContent="Login gagal";}};
+    onAuthStateChanged(auth,(user)=>{
+      if(user){loginCard.classList.add("hidden");formCard.classList.remove("hidden");listCard.classList.remove("hidden");reloadList();}
+      else{loginCard.classList.remove("hidden");formCard.classList.add("hidden");listCard.classList.add("hidden");}
+    });
+
+    document.getElementById("loginBtn").onclick=async()=>{
+      const email=document.getElementById("loginEmail").value;
+      const pw=document.getElementById("loginPassword").value;
+      try{await signInWithEmailAndPassword(auth,email,pw);}
+      catch(err){document.getElementById("loginMsg").textContent="Login gagal";}
+    };
+
     document.getElementById("logoutBtn").onclick=()=>signOut(auth);
     document.getElementById("resetBtn").onclick=()=>resetForm();
     document.getElementById("saveBtn").onclick=()=>submitForm();
-    document.getElementById("filterKategori").onchange=()=>reloadList();
-    document.getElementById("searchAdmin").oninput=()=>reloadList();
 
-    async function reloadList(){try{showLoading(true);let q=collection(db,"posts");const cat=document.getElementById("filterKategori").value;if(cat) q=query(collection(db,"posts"),where("category","==",cat));const snap=await getDocs(q);showLoading(false);tbody.innerHTML="";const keyword=document.getElementById("searchAdmin").value.toLowerCase();snap.forEach(docSnap=>{const d=docSnap.data();if(!(d.title.toLowerCase().includes(keyword)||d.content.toLowerCase().includes(keyword)))return;const tr=document.createElement("tr");tr.innerHTML=`<td><strong>${d.title}</strong><div class="muted">${d.slug||""}</div><div class="mt"><a href="#" onclick="editRow('${docSnap.id}');return false;">Edit</a> | <a href="#" onclick="arsipkan('${docSnap.id}');return false;">Arsipkan</a> | <a href="#" onclick="hapus('${docSnap.id}');return false;" class="danger">Hapus</a></div></td><td>${d.category}</td><td>${d.createdAt?d.createdAt.toDate().toLocaleDateString("id-ID"):""}</td><td><span class="tag">${d.status}</span></td><td>${d.imageUrl?`<a href="${d.imageUrl}" target="_blank">Lihat</a>`:"-"}</td>`;tbody.appendChild(tr);});}catch(err){showPopup("Gagal memuat data");}}
+    async function reloadList(){
+      showLoading(true);
+      let q=collection(db,"posts");
+      const snap=await getDocs(q);
+      showLoading(false);
+      tbody.innerHTML="";
+      snap.forEach(docSnap=>{
+        const d=docSnap.data();
+        const tr=document.createElement("tr");
+        tr.innerHTML=`
+          <td><strong>${d.title}</strong><div class="muted">${d.slug||""}</div>
+          <div class="mt"><a href="#" onclick="editRow('${docSnap.id}');return false;">Edit</a> | <a class="danger" href="#" onclick="arsipkan('${docSnap.id}');return false;">Arsipkan</a></div></td>
+          <td>${d.category}</td>
+          <td>${d.createdAt?d.createdAt.toDate().toLocaleDateString("id-ID"):""}</td>
+          <td><span class="tag">${d.status}</span></td>
+          <td>${d.imageUrl?`<a href="${d.imageUrl}" target="_blank">Lihat</a>`:"-"}</td>`;
+        tbody.appendChild(tr);
+      });
+    }
 
-    window.editRow=async(id)=>{showLoading(true);const snap=await getDoc(doc(db,"posts",id));showLoading(false);if(!snap.exists())return;const d=snap.data();EDIT_ID=id;document.getElementById("formTitle").textContent="Edit Konten";document.getElementById("fJudul").value=d.title||"";document.getElementById("fKategori").value=d.category||"Berita";document.getElementById("fIsi").value=d.content||"";document.getElementById("fGambarURL").value=d.imageUrl||"";document.getElementById("fStatus").value=d.status||"Aktif";document.getElementById("fSlug").value=d.slug||"";window.scrollTo({top:0,behavior:"smooth"});};
-    window.arsipkan=async(id)=>{window._confirmCb=async()=>{await updateDoc(doc(db,"posts",id),{status:"Arsip"});reloadList();};showPopup("Arsipkan item ini?",["Ya","Batal"]);};
-    window.hapus=async(id)=>{window._confirmCb=async()=>{await deleteDoc(doc(db,"posts",id));reloadList();};showPopup("Hapus item ini?",["Ya","Batal"]);};
+    window.editRow=async(id)=>{
+      showLoading(true);
+      const snap=await getDoc(doc(db,"posts",id));
+      showLoading(false);
+      if(!snap.exists())return;
+      const d=snap.data();
+      EDIT_ID=id;
+      document.getElementById("formTitle").textContent="Edit Konten";
+      document.getElementById("fJudul").value=d.title||"";
+      document.getElementById("fKategori").value=d.category||"Berita";
+      document.getElementById("fIsi").value=d.content||"";
+      document.getElementById("fGambarURL").value=d.imageUrl||"";
+      document.getElementById("fStatus").value=d.status||"Aktif";
+      document.getElementById("fSlug").value=d.slug||"";
+      window.scrollTo({top:0,behavior:"smooth"});
+    };
 
-    function resetForm(){EDIT_ID=null;document.getElementById("formTitle").textContent="Tambah Konten";["fJudul","fIsi","fGambarURL","fSlug"].forEach(id=>document.getElementById(id).value="");document.getElementById("fKategori").value="Berita";document.getElementById("fStatus").value="Aktif";document.getElementById("fFile").value="";document.getElementById("formMsg").textContent="";}
-    async function submitForm(){const title=document.getElementById("fJudul").value.trim();const category=document.getElementById("fKategori").value;const content=document.getElementById("fIsi").value.trim();const status=document.getElementById("fStatus").value;const slug=document.getElementById("fSlug").value.trim();let imageUrl=document.getElementById("fGambarURL").value.trim();const file=document.getElementById("fFile").files[0];if(file){const formData=new FormData();formData.append("file",file);formData.append("upload_preset",UPLOAD_PRESET);showLoading(true);const res=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{method:"POST",body:formData});const data=await res.json();showLoading(false);if(data.secure_url){imageUrl=data.secure_url;document.getElementById("fGambarURL").value=imageUrl;}}const payload={title,category,content,status,slug,imageUrl,createdAt:serverTimestamp(),author:auth.currentUser.email};try{if(EDIT_ID){await updateDoc(doc(db,"posts",EDIT_ID),payload);}else{await addDoc(collection(db,"posts"),payload);}document.getElementById("formMsg").textContent="Tersimpan ✓";resetForm();reloadList();}catch(err){document.getElementById("formMsg").textContent="Gagal menyimpan";}}
+    window.arsipkan=(id)=>{
+      showPopup("Arsipkan item ini?",true,async(ok)=>{if(ok){await updateDoc(doc(db,"posts",id),{status:"Arsip"});reloadList();}});
+    };
+
+    function resetForm(){
+      EDIT_ID=null;
+      document.getElementById("formTitle").textContent="Tambah Konten";
+      ["fJudul","fIsi","fGambarURL","fSlug"].forEach(id=>document.getElementById(id).value="");
+      document.getElementById("fKategori").value="Berita";
+      document.getElementById("fStatus").value="Aktif";
+      document.getElementById("fFile").value="";
+      document.getElementById("formMsg").textContent="";
+    }
+
+    async function submitForm(){
+      const title=document.getElementById("fJudul").value.trim();
+      const category=document.getElementById("fKategori").value;
+      const content=document.getElementById("fIsi").value.trim();
+      const status=document.getElementById("fStatus").value;
+      const slug=document.getElementById("fSlug").value.trim();
+      let imageUrl=document.getElementById("fGambarURL").value.trim();
+
+      const file=document.getElementById("fFile").files[0];
+      if(file){
+        const formData=new FormData();
+        formData.append("file",file);
+        formData.append("upload_preset",UPLOAD_PRESET);
+        showLoading(true);
+        const res=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{method:"POST",body:formData});
+        const data=await res.json();
+        showLoading(false);
+        if(data.secure_url){imageUrl=data.secure_url;document.getElementById("fGambarURL").value=imageUrl;}
+      }
+
+      const payload={title,category,content,status,slug,imageUrl,createdAt:serverTimestamp(),author:auth.currentUser.email};
+
+      try{
+        if(EDIT_ID){await updateDoc(doc(db,"posts",EDIT_ID),payload);}
+        else{await addDoc(collection(db,"posts"),payload);}
+        document.getElementById("formMsg").textContent="Tersimpan ✓";
+        resetForm();reloadList();
+      }catch(err){document.getElementById("formMsg").textContent="Gagal menyimpan";}
+    }
   </script>
 </body>
 </html>
