--- a/index.html
+++ b/index.html
@@ -4,103 +4,93 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal Berita</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {margin:0;font-family:'Poppins',sans-serif;background:#f9f9fb;color:#222;}
-    header {padding:1rem;background:#fff;border-bottom:1px solid #ddd;position:sticky;top:0;z-index:100;}
-    h1 {margin:0;font-size:1.3rem;}
-    nav {display:flex;gap:1rem;margin-top:.5rem;}
-    nav a {text-decoration:none;color:#555;font-weight:500;padding:.3rem .6rem;border-radius:8px;}
-    nav a.active {background:#f7b500;color:#000;}
-    main {max-width:960px;margin:1rem auto;padding:0 1rem;}
-    .card {background:#fff;border-radius:16px;box-shadow:0 2px 6px rgba(0,0,0,.05);margin-bottom:1rem;padding:1rem;}
-    .thumb {max-height:180px;width:100%;object-fit:cover;border-radius:12px;margin-bottom:.6rem;}
-    h3 {margin:.2rem 0;}
-    .date {color:#666;font-size:.85rem;margin-bottom:.5rem;}
-    .btn {display:inline-block;background:linear-gradient(135deg,#ffd84d,#f7b500);color:#000;padding:.4rem .8rem;border-radius:20px;text-decoration:none;font-weight:600;font-size:.9rem;}
-    /* === popup custom === */
-    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:9999}
+    body{margin:0;font-family:'Poppins',sans-serif;background:#f9f9fb;color:#222;}
+    header{background:#fff;position:sticky;top:0;z-index:10;box-shadow:0 2px 4px rgba(0,0,0,0.05);}
+    header h1{margin:0;padding:1rem;font-size:1.2rem;}
+    main{max-width:960px;margin:auto;padding:1rem;}
+    .card{background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(0,0,0,.06);padding:1rem;margin-bottom:1rem;}
+    .thumb{max-height:180px;width:100%;object-fit:cover;border-radius:12px;}
+    .searchBox{margin:1rem 0;}
+    .searchBox input{width:100%;padding:.6rem;border:1px solid #ddd;border-radius:16px;}
+
+    /* LOADING */
+    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.7);display:none;justify-content:center;align-items:center;z-index:2000;}
+    .spinner{width:40px;height:40px;border:4px solid #ddd;border-top:4px solid #f7b500;border-radius:50%;animation:spin 1s linear infinite;}
+    @keyframes spin{to{transform:rotate(360deg);}}
+
+    /* POPUP */
+    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:5000}
     .fb01-overlay.active{display:flex}
-    .fb01-box{background:#fff;max-width:340px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;font-family:inherit;color:inherit}
-    .fb01-box p{margin:0;font-size:14px;line-height:1.5}
-    .fb01-actions{display:flex;gap:8px;justify-content:center;margin-top:14px}
-    .fb01-btn{border:none;border-radius:10px;padding:8px 14px;cursor:pointer;font-weight:600}
-    .fb01-ok{background:#f7b500;color:#000}
+    .fb01-box{background:#fff;max-width:320px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;text-align:center;}
+    .fb01-box p{margin:0;font-size:14px}
+    .fb01-actions{margin-top:12px}
+    .fb01-btn{background:#f7b500;color:#000;border:none;padding:8px 14px;border-radius:10px;cursor:pointer;font-weight:600}
   </style>
 </head>
 <body>
-  <header>
-    <h1>Portal Berita</h1>
-    <nav>
-      <a href="#" data-tab="Berita" class="active">Berita</a>
-      <a href="#" data-tab="Pengumuman">Pengumuman</a>
-      <a href="#" data-tab="Peraturan">Peraturan</a>
-    </nav>
-  </header>
+  <header><h1>Portal Berita</h1></header>
+  <main>
+    <div class="searchBox"><input type="text" id="searchInput" placeholder="Cari berita..."></div>
+    <div id="posts"></div>
+  </main>
 
-  <main><div id="contentList"></div></main>
+  <div id="loadingOverlay"><div class="spinner"></div></div>
 
-  <!-- popup -->
-  <div id="fb01Popup" class="fb01-overlay" aria-hidden="true">
-    <div class="fb01-box">
-      <p id="fb01Msg"></p>
-      <div class="fb01-actions" id="fb01Actions"></div>
-    </div>
-  </div>
+  <!-- POPUP -->
+  <div id="fb01Popup" class="fb01-overlay"><div class="fb01-box">
+    <p id="fb01Msg"></p>
+    <div class="fb01-actions"><button class="fb01-btn" onclick="document.getElementById('fb01Popup').classList.remove('active')">OK</button></div>
+  </div></div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getFirestore, collection, getDocs, query, where, orderBy } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import { getFirestore, collection, getDocs, query, orderBy, where } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
-      authDomain:"portal-berita-firebase.firebaseapp.com",
-      projectId:"portal-berita-firebase",
-      storageBucket:"portal-berita-firebase.firebasestorage.app",
-      messagingSenderId:"598254123187",
-      appId:"1:598254123187:web:9418bcbe0a00dda3c3d8c6"
-    };
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    const firebaseConfig={apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",authDomain:"portal-berita-firebase.firebaseapp.com",projectId:"portal-berita-firebase"};
+    const app=initializeApp(firebaseConfig);
+    const db=getFirestore(app);
 
-    function fb01Alert(msg){
-      const overlay=document.getElementById('fb01Popup');
-      document.getElementById('fb01Msg').textContent=msg;
-      document.getElementById('fb01Actions').innerHTML='<button class="fb01-btn fb01-ok" onclick="document.getElementById(`fb01Popup`).classList.remove(`active`)">OK</button>';
-      overlay.classList.add('active');
-    }
+    const postsDiv=document.getElementById("posts");
+    const searchInput=document.getElementById("searchInput");
 
-    async function loadPosts(category){
+    function showLoading(on){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
+    function fb01Alert(msg){document.getElementById("fb01Msg").textContent=msg;document.getElementById("fb01Popup").classList.add("active");}
+
+    async function loadPosts(){
+      showLoading(true);
+      postsDiv.innerHTML="";
       try{
-        const q=query(collection(db,"posts"),where("category","==",category),orderBy("createdAt","desc"));
+        let q=query(collection(db,"posts"),where("status","==","Aktif"),orderBy("createdAt","desc"));
         const snap=await getDocs(q);
-        const c=document.getElementById("contentList");
-        c.innerHTML="";
-        if(snap.empty){c.innerHTML="<p>Tidak ada data.</p>";return;}
+        if(snap.empty){postsDiv.innerHTML="<p>Tidak ada data.</p>";}
         snap.forEach(doc=>{
           const d=doc.data();
-          c.innerHTML+=`
-            <div class="card">
-              ${d.imageUrl?`<img src="${d.imageUrl}" class="thumb">`:""}
-              <h3>${d.title}</h3>
-              <div class="date">${d.createdAt?.toDate().toLocaleDateString("id-ID")||""}</div>
-              <p>${d.content.substring(0,120)}...</p>
-              <a href="detail.html?id=${doc.id}" class="btn">Baca Selengkapnya</a>
-            </div>`;
+          const card=document.createElement("div");
+          card.className="card";
+          card.innerHTML=`
+            ${d.imageUrl?`<img src="${d.imageUrl}" class="thumb">`:""}
+            <h3>${d.title}</h3>
+            <p>${(d.content||"").substring(0,100)}...</p>
+            <a href="detail.html?slug=${d.slug}">Baca selengkapnya</a>
+          `;
+          postsDiv.appendChild(card);
         });
-      }catch(err){fb01Alert("Gagal memuat data");}
+      }catch(e){fb01Alert("Gagal memuat data");}
+      showLoading(false);
     }
 
-    document.querySelectorAll("nav a").forEach(a=>{
-      a.addEventListener("click",e=>{
-        e.preventDefault();
-        document.querySelectorAll("nav a").forEach(x=>x.classList.remove("active"));
-        a.classList.add("active");
-        loadPosts(a.dataset.tab);
+    searchInput.addEventListener("input",()=>{
+      const val=searchInput.value.toLowerCase();
+      [...postsDiv.children].forEach(c=>{
+        const t=c.querySelector("h3")?.textContent.toLowerCase()||"";
+        const p=c.querySelector("p")?.textContent.toLowerCase()||"";
+        c.style.display=(t.includes(val)||p.includes(val))?"block":"none";
       });
     });
 
-    loadPosts("Berita");
+    loadPosts();
   </script>
 </body>
 </html>
