--- a/detail.html
+++ b/detail.html
@@ -4,76 +4,76 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Berita</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body{margin:0;font-family:'Poppins',sans-serif;background:#f9f9fb;color:#222;}
-    header{padding:1rem;background:#fff;border-bottom:1px solid #ddd;position:sticky;top:0;}
-    header a{text-decoration:none;color:#000;font-weight:600;background:linear-gradient(135deg,#ffd84d,#f7b500);padding:.4rem .8rem;border-radius:20px;}
-    main{max-width:960px;margin:1rem auto;padding:0 1rem;}
-    .card{background:#fff;border-radius:16px;box-shadow:0 2px 6px rgba(0,0,0,.05);padding:1rem;}
-    .detail-img{max-width:700px;max-height:400px;object-fit:cover;width:100%;border-radius:12px;margin-bottom:1rem;}
-    h2{margin-top:.5rem;}
-    .date{color:#666;font-size:.9rem;margin-bottom:.6rem;}
-    /* === popup custom === */
-    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:9999}
+    header{background:#fff;position:sticky;top:0;z-index:10;box-shadow:0 2px 4px rgba(0,0,0,0.05);}
+    header h1{margin:0;padding:1rem;font-size:1.2rem;}
+    main{max-width:960px;margin:auto;padding:1rem;}
+    .detail-img{max-width:700px;max-height:400px;width:100%;object-fit:cover;border-radius:12px;margin-bottom:1rem;}
+    a.back{display:inline-block;margin-top:1rem;padding:.6rem 1rem;background:#f7b500;color:#000;border-radius:20px;text-decoration:none;font-weight:600;}
+
+    /* LOADING */
+    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,.7);display:none;justify-content:center;align-items:center;z-index:2000;}
+    .spinner{width:40px;height:40px;border:4px solid #ddd;border-top:4px solid #f7b500;border-radius:50%;animation:spin 1s linear infinite;}
+    @keyframes spin{to{transform:rotate(360deg);}}
+
+    /* POPUP */
+    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:5000}
     .fb01-overlay.active{display:flex}
-    .fb01-box{background:#fff;max-width:340px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;font-family:inherit;color:inherit}
-    .fb01-box p{margin:0;font-size:14px;line-height:1.5}
-    .fb01-actions{display:flex;gap:8px;justify-content:center;margin-top:14px}
-    .fb01-btn{border:none;border-radius:10px;padding:8px 14px;cursor:pointer;font-weight:600}
-    .fb01-ok{background:#f7b500;color:#000}
+    .fb01-box{background:#fff;max-width:320px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;text-align:center;}
+    .fb01-box p{margin:0;font-size:14px}
+    .fb01-actions{margin-top:12px}
+    .fb01-btn{background:#f7b500;color:#000;border:none;padding:8px 14px;border-radius:10px;cursor:pointer;font-weight:600}
   </style>
 </head>
 <body>
-  <header><a href="index.html">⬅ Kembali</a></header>
-  <main><div id="detailContainer"></div></main>
+  <header><h1>Detail Berita</h1></header>
+  <main>
+    <h2 id="title"></h2>
+    <img id="img" class="detail-img hidden">
+    <p id="content"></p>
+    <a href="index.html" class="back">Kembali</a>
+  </main>
 
-  <!-- popup -->
-  <div id="fb01Popup" class="fb01-overlay" aria-hidden="true">
-    <div class="fb01-box">
-      <p id="fb01Msg"></p>
-      <div class="fb01-actions" id="fb01Actions"></div>
-    </div>
-  </div>
+  <div id="loadingOverlay"><div class="spinner"></div></div>
+
+  <!-- POPUP -->
+  <div id="fb01Popup" class="fb01-overlay"><div class="fb01-box">
+    <p id="fb01Msg"></p>
+    <div class="fb01-actions"><button class="fb01-btn" onclick="document.getElementById('fb01Popup').classList.remove('active')">OK</button></div>
+  </div></div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+    import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
-      authDomain:"portal-berita-firebase.firebaseapp.com",
-      projectId:"portal-berita-firebase",
-      storageBucket:"portal-berita-firebase.firebasestorage.app",
-      messagingSenderId:"598254123187",
-      appId:"1:598254123187:web:9418bcbe0a00dda3c3d8c6"
-    };
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    const firebaseConfig={apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",authDomain:"portal-berita-firebase.firebaseapp.com",projectId:"portal-berita-firebase"};
+    const app=initializeApp(firebaseConfig);
+    const db=getFirestore(app);
 
-    function fb01Alert(msg){
-      const overlay=document.getElementById('fb01Popup');
-      document.getElementById('fb01Msg').textContent=msg;
-      document.getElementById('fb01Actions').innerHTML='<button class="fb01-btn fb01-ok" onclick="document.getElementById(`fb01Popup`).classList.remove(`active`)">OK</button>';
-      overlay.classList.add('active');
-    }
+    const params=new URLSearchParams(window.location.search);
+    const slug=params.get("slug");
+
+    function showLoading(on){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
+    function fb01Alert(msg){document.getElementById("fb01Msg").textContent=msg;document.getElementById("fb01Popup").classList.add("active");}
 
     async function loadDetail(){
-      const id=new URLSearchParams(window.location.search).get("id");
-      if(!id){fb01Alert("Gagal memuat detail");return;}
+      showLoading(true);
       try{
-        const snap=await getDoc(doc(db,"posts",id));
-        if(!snap.exists()){fb01Alert("Gagal memuat detail");return;}
-        const d=snap.data();
-        document.getElementById("detailContainer").innerHTML=`
-          <div class="card">
-            ${d.imageUrl?`<img src="${d.imageUrl}" class="detail-img">`:""}
-            <h2>${d.title}</h2>
-            <div class="date">${d.createdAt?.toDate().toLocaleDateString("id-ID")||""}</div>
-            <p>${d.content.replace(/\\n/g,"<br>")}</p>
-          </div>`;
-      }catch(err){fb01Alert("Gagal memuat detail");}
+        const q=query(collection(db,"posts"),where("slug","==",slug),where("status","==","Aktif"));
+        const snap=await getDocs(q);
+        if(snap.empty){fb01Alert("Konten tidak ditemukan");}
+        snap.forEach(doc=>{
+          const d=doc.data();
+          document.getElementById("title").textContent=d.title;
+          document.getElementById("content").textContent=d.content;
+          if(d.imageUrl){const img=document.getElementById("img");img.src=d.imageUrl;img.classList.remove("hidden");}
+        });
+      }catch(e){fb01Alert("Gagal memuat data");}
+      showLoading(false);
     }
+
     loadDetail();
   </script>
 </body>
